--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="container">
 
     <div class="sidebar">
-        Sidebar
+        <button class="nav-btn"></button>
     </div><!-- End of sidebar-->
 
     <header class="header">
@@ -412,7 +412,20 @@
     <!--End of gallery-->
 
     <footer class="footer">
-        Footer
+        <ul class="nav">
+            <li class="nav__item"><a href="#" class="nav__link">Find you dream home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+        </ul>
+
+        <p class="copyright">
+            &copy; Copyright Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eaque officia delectus sint
+            architecto amet repellat rerum? Aliquam voluptatum ad reiciendis architecto assumenda sequi, aut, atque
+            cumque veniam accusamus facilis.
+        </p>
     </footer>
     <!--End of footer-->
 </body>
