--- a/index.html
+++ b/index.html
@@ -20,12 +20,41 @@
     </div><!-- End of sidebar-->
 
     <header class="header">
-        Header
+        <img src="img/logo.png" alt="Logo" class="header__logo">
+        <h3 class="heading-3">Your own home:</h3>
+        <h1 class="heading-1">The ultimate peronal freedom</h1>
+        <button class="btn header__btn">View our properties</button>
+        <div class="header__seenon-text">As seen on</div>
+        <div class="header__seenon-logos">
+            <img src="img/logo-bbc.png" alt="BBC">
+            <img src="img/logo-forbes.png" alt="Forbes">
+            <img src="img/logo-techcrunch.png" alt="Techcrunch">
+            <img src="img/logo-bi.png" alt="Business insider">
+        </div>
     </header>
     <!--End of header-->
 
     <div class="realtors">
-        Realtors
+        <h3 class="heading-3">Top 3 realtors</h3>
+        <div class="realtors__list">
+            <img src="img/realtor-1.jpeg" alt="Realtor" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                <p class="realtors__sold">245 houses sold</p>
+            </div>
+
+            <img src="img/realtor-2.jpeg" alt="Realtor" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                <p class="realtors__sold">212 houses sold</p>
+            </div>
+
+            <img src="img/realtor-3.jpeg" alt="Realtor" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                <p class="realtors__sold">198 houses sold</p>
+            </div>
+        </div>
     </div>
     <!--End of realtors-->
 
