--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <img src="img/logo.png" alt="Logo" class="header__logo">
         <h3 class="heading-3">Your own home:</h3>
-        <h1 class="heading-1">The ultimate peronal freedom</h1>
+        <h1 class="heading-1">The ultimate personal freedom</h1>
         <button class="btn header__btn">View our properties</button>
         <div class="header__seenon-text">As seen on</div>
         <div class="header__seenon-logos">
